@@ -1,5 +1,9 @@
 Sun Dec  9 08:54:38 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
 
+	* tests/MEM_Stream_Test.cpp: Added a call to ACE_Thread_Manager::wait()
+	  to ensure the test shuts down in the right order.  Thanks to
+ 	  Michael Searles <msearles@base16.com> for reporting this.
+
 	* ace/Message_Queue_T.i (dequeue): Call dequeue_head() rather than
 	  queue_.dequeue() to get the proper type enforcement.  Thanks to
 	  Bill Fulton <Bill_A_Fulton@raytheon.com> for contributing this fix.
